fix(docs): fixed excessive theme switch. fixed storybook bug of excessive scrollbar

--- a/.storybook/custom/custom.scss
+++ b/.storybook/custom/custom.scss
@@ -6,11 +6,18 @@ body {
 
 /* fix bug in storybook@6 where toolbar height is hardcoded - causes scrollbar  */
 a[title='Open canvas in new tab'] {
-  height: 34px;
+  height: initial;
+  margin-top: 0;
 }
 
 .sbdocs.sbdocs-content {
   max-width: 85%;
+}
+
+.fd-introduction {
+  .sbdocs.sbdocs-content {
+    margin-right: -200px !important;
+  }
 }
 
 /* make room for TOCBot */
@@ -189,6 +196,7 @@ $heading-toc-spacer: $docs-hd-tp + $docs-hd-bp + $docs-hd-ch + $docs-tm;
       color: #0e7290;
     }
   }
+
   /* stylelint-enable no-descending-specificity */
 
   &__logo {
@@ -251,6 +259,7 @@ $heading-toc-spacer: $docs-hd-tp + $docs-hd-bp + $docs-hd-ch + $docs-tm;
     font-weight: normal;
     font-size: 16px;
   }
+
   /* stylelint-disable no-descending-specificity */
   a {
     color: #0e7290;
@@ -260,6 +269,7 @@ $heading-toc-spacer: $docs-hd-tp + $docs-hd-bp + $docs-hd-ch + $docs-tm;
       color: #404040;
     }
   }
+
   /* stylelint-enable no-descending-specificity */
 
   img {
